src/objects/Beer_Order__c/fields/Order_Amount__c.field-meta.xml
<CustomField>
        <fullName>Order_Amount__c</fullName>
        <label>Order Amount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>