src/objects/Beer_Order__c/fields/Ordered_Quantity__c.field-meta.xml
<CustomField>
        <fullName>Ordered_Quantity__c</fullName>
        <label>Ordered Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>